# nav2_autonomous_navigation_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: mapper_params_online_async.yaml  nav2_params.yaml  view_nav.rviz  view_slam.rviz
description/: body.urdf.xacro  castors.urdf.xacro  gz_control.urdf.xacro  gz_plugins.urdf.xacro  r2c_controllers.urdf.xacro  robot.urdf.xacro  sensors.urdf.xacro  wheels.urdf.xacro
launch/: display.launch.py  gz_control.launch.py  jsp.launch.py  localization_launch.py  navigation.launch.py  online_async_launch.py  rsp.launch.py  sim_nav.launch.py  sim_slam.launch.py
maps/: simple_arena_map_1.pgm  simple_arena_map_1.yaml
src/: set_initial_pose.cpp  set_nav_goal.cpp  set_wp_client.cpp
worlds/: simple_arena.sdf
